--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "@react-google-maps/api": "^2.19.2",
     "next": "13.5.5",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-icons": "^4.11.0"
   },
   "devDependencies": {
     "@types/node": "^20",
